--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav id="nav-bar" class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
              <a class="navbar-brand" href="#">
-    <img src="Kushalsharmawebsite/kusal.png" alt="KUSHAL SHARMA">
+    <img src="kusal.png" alt="KUSHAL SHARMA">
     <span>KUSHAL SHARMA</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
         <h2 class="text-center">About Me</h2>
         <div class="row">
             <div class="col-md-6 about-img">
-                <img src="images/About.png" alt="Kushal Sharma">
+                <img src="About.png" alt="Kushal Sharma">
             </div>
             <div class="col-md-6 about-content">
                 <p>Hello, I'm Kushal Sharma, a 3D Artist from Nepal with a passion for creating amazing worlds and Scene. I specialize in  Shading and Lighting using popular tools like Autodesk Maya, 3ds Max, Blender, Unreal Engine, DaVinci Resolve, Adobe After Effects, and Premiere Pro to bring my ideas to life.</p>
@@ -110,7 +110,7 @@
 <div class="gallery">
     <!-- 3D Section -->
     <div class="portfolio-item 3d">
-        <img src="images/watch-small.jpg" alt="3D Watch Model" loading="lazy">
+        <img src="watch-small.jpg" alt="3D Watch Model" loading="lazy">
         <div class="portfolio-overlay">
             <h3>Modelling</h3>
             <!--<p>High-quality 3D model of a wristwatch designed in Maya and Blender.</p> -->
