--- a/index.html
+++ b/index.html
@@ -65,15 +65,20 @@
         </div>
     </nav>
 
-     <!-- Hero Section -->
-    <section id="hero">
-        <div class="container">
-            <h1>Kushal Sharma</h1>
-            <h1>Welcome to My 3D Art Portfolio</h1>
-            <p>Explore my journey of creativity, innovation, and art.</p>
-            <a href="#portfolio" class="btn">Explore My Work</a>
-        </div>
-    </section>
+    <!-- Hero Section -->
+<section id="hero">
+    <div class="container">
+        <h1>Kushal Sharma</h1>
+        <h1>Welcome to My 3D Art Portfolio</h1>
+        <p>Explore my journey of creativity, innovation, and art.</p>
+        
+        <!-- First Button -->
+        <a href="#portfolio" class="btn">Explore My Work</a>
+        
+        <!-- New ArtStation Button -->
+        <a href="https://www.artstation.com/kushalry" class="btn artstation-btn" target="_blank">Visit My ArtStation</a>
+    </div>
+</section>
 
    <!-- About Me Section -->
     <section id="about" class="container">
